--- a/css/styles.css
+++ b/css/styles.css
@@ -687,6 +687,7 @@ img {
 
     width: 528px;
     height: 581px;
+    padding: 40px;
     background: var(--background-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -709,3 +710,61 @@ img {
 
     cursor: pointer;
 }
+
+.modal-title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-color);
+
+    margin-bottom: 12px;
+}
+
+/* .form-modal {
+    width: 448px;
+} */
+
+/* .form-label {
+    position: relative;
+    margin-bottom: 4px;
+    display: block;
+} */
+
+.label-title {
+    display: block;
+    margin-bottom: 4px;
+}
+
+.form-input {
+    width: 448px;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 42px;
+    outline: none;
+    transition: border-color var(--anim-hover);
+}
+
+
+.form-wrap {
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.modal-icon {
+    position: absolute;
+    top: 14px;
+    left: 15px;
+    transition: fill var(--anim-hover);
+}
+
+.form-input:focus,
+.form-input:hover {
+    border-color: var(--attention-color);
+}
+
+.form-wrap:focus-within  .modal-icon {
+    fill: var(--attention-color);
+} 
