--- a/css/styles.css
+++ b/css/styles.css
@@ -194,7 +194,7 @@ img {
 
 }
 
-.hero .btn {
+ .btn {
     display: block;
     margin: 0 auto;
     padding: 10px 32px;
@@ -212,8 +212,8 @@ img {
     transition: background-color var(--anim-hover);
 }
 
-.hero .btn:hover,
-.hero .btn:focus {
+ .btn:hover,
+ .btn:focus {
     background-color:var(--hover-color);
 }
 
@@ -686,8 +686,9 @@ img {
     transition: transform 700ms cubic-bezier(0.4, 0, 0.2, 1);
 
     width: 528px;
-    height: 581px;
-    padding: 40px;
+    min-height: 581px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     background: var(--background-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -709,6 +710,12 @@ img {
     justify-content: center;
 
     cursor: pointer;
+    transition: var(--anim-hover);
+}
+
+.modal-btn:hover .icon,
+.modal-btn:focus .icon {
+    fill: var(--attention-color);
 }
 
 .modal-title {
@@ -722,15 +729,11 @@ img {
     margin-bottom: 12px;
 }
 
-/* .form-modal {
-    width: 448px;
-} */
-
-/* .form-label {
-    position: relative;
-    margin-bottom: 4px;
-    display: block;
-} */
+.form-container {
+    display: flex;
+    justify-content: center;
+    
+}
 
 .label-title {
     display: block;
@@ -767,4 +770,67 @@ img {
 
 .form-wrap:focus-within  .modal-icon {
     fill: var(--attention-color);
-} 
+}
+
+.form-comment {
+    display: block;
+    font-size: 12px;
+    width: 448px;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    margin-bottom: 20px;
+    padding: 12px 16px;
+    outline: transparent;
+    resize: none;
+    transition: var(--anim-hover);
+}
+
+.form-comment::placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.form-comment:hover,
+.form-comment:focus {
+    border-color: var(--attention-color);
+}
+
+.terms {
+    display: flex;
+    gap: 7px;
+    margin-left: 14px;
+    margin-bottom: 30px;
+}
+
+.terms-descr {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--text-color);
+}
+
+.terms-link {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--attention-color);
+}
+
+.form-btn {
+    width: 200px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.btn-subscribe {
+    position: relative;
+    display: block;
+}
+
+
