--- a/css/styles.css
+++ b/css/styles.css
@@ -532,6 +532,68 @@ img {
     background: var(--attention-color);
 }
 
+.subscribe {
+    margin-left: auto;
+}
+
+.subscribe-wrap {
+    display: flex;
+    gap: 12px;
+}
+
+
+.submit-title {
+    display: block;
+    margin-bottom: 20px;
+}
+
+.subscribe-input {
+    width: 358px;
+    height: 50px;
+    padding-left: 16px;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color:transparent;
+
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+    outline: transparent;
+}
+
+.subscribe-input::placeholder {
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.btn-subscribe {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 28px;
+    width: 200px;
+    height: 50px;
+    
+}
+
+.btn-subscribe > span {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    margin-right: 10px;
+    color: var(--background-color);
+}
+
+.icon-subscribe {
+    fill: var(--background-color);
+}
+
 /* Портфоліо */
 
 /* Фільтр */
@@ -801,7 +863,8 @@ img {
 .terms {
     display: flex;
     gap: 7px;
-    margin-left: 14px;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 30px;
 }
 
@@ -819,6 +882,23 @@ img {
     color: var(--attention-color);
 }
 
+.icon-checked {
+    opacity: 0;
+    transition: var(--anim-hover);
+}
+
+.checkbox:checked + .terms-icons .icon-checked {
+    opacity: 1;
+}
+.icon-unchecked {
+    transition: var(--anim-hover);
+}
+
+.checkbox:checked + .terms-icons .icon-unchecked {
+    opacity: 0;
+}
+
+
 .form-btn {
     width: 200px;
     height: 50px;
@@ -827,10 +907,3 @@ img {
     align-items: center;
 
 }
-
-.btn-subscribe {
-    position: relative;
-    display: block;
-}
-
-
