--- a/css/styles.css
+++ b/css/styles.css
@@ -578,20 +578,20 @@ img {
     padding: 10px 28px;
     width: 200px;
     height: 50px;
-    
-}
 
-.btn-subscribe > span {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
-    margin-right: 10px;
+    
     color: var(--background-color);
+    
 }
+
 
 .icon-subscribe {
     fill: var(--background-color);
+    margin-left: 10px;
 }
 
 /* Портфоліо */
@@ -748,9 +748,7 @@ img {
     transition: transform 700ms cubic-bezier(0.4, 0, 0.2, 1);
 
     width: 528px;
-    min-height: 581px;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding: 40px;
     background: var(--background-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -800,6 +798,7 @@ img {
 .label-title {
     display: block;
     margin-bottom: 4px;
+    font-size: 12px;
 }
 
 .form-input {
@@ -831,6 +830,10 @@ img {
 }
 
 .form-wrap:focus-within  .modal-icon {
+    fill: var(--attention-color);
+}
+
+.form-wrap:hover  .modal-icon {
     fill: var(--attention-color);
 }
 
